test/compile-fail/loop__for.he
fn main
{
    for (i = "0" to 10) { 1; } //~ ERROR 3001
    for (i = 0 to "10") { 1; } //~ ERROR 3001
    ret 0;
}
